# av-lib-cx-freeze-repro

./: README.md  pyproject.toml  setup.py
.github/workflows/: build-and-run.yml
src/: main.py
