[tool.poetry]
name = "av-lib-cx-freeze-repro"
packages = [{ include = "src" }]
version = "v0.0.0"
description = ""
readme = "README.md"
authors = ["Martin Miglio <code@martinmiglio.dev>"]
include = []


[tool.poetry.dependencies]
python = "^3.11"
av = "^11.0.0"


[tool.poetry.group.build]
optional = true


[tool.poetry.group.build.dependencies]
cx-freeze = {version = "^6.16.0.dev12", source = "cx-freeze-devel"}

[[tool.poetry.source]]
name = "cx-freeze-devel"
url = "https://marcelotduarte.github.io/packages/"
priority = "explicit"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

